# pfgmpp-idmd

./: dataset_tool.py  download_pfgmpp_checkpoint.py  generate.sh  pfgmpp_kernel.py  pyproject.toml  run_idmd.sh  sid_generate.py  sid_sampler.py  sid_train.py
metrics/: sid_metric_main.py  sid_metric_utils.py
training/: sid_loss.py  sid_training_loop.py
