[project]
name = "iddm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "numpy<2.3",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "torch<2.7",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
